--- a/Cinestar-app/PodaciORacunu.xaml
+++ b/Cinestar-app/PodaciORacunu.xaml
@@ -3,6 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cinestar_app.PodaciORacunu"
              Title="PodaciORacunu">
+
+    <NavigationPage.TitleView>
+        <Label Text="Podaci o Računu"
+               FontSize="17"
+               TextColor="White"
+               Margin="0,0,60,0"
+               VerticalOptions="Center"
+               HorizontalOptions="Center"
+               FontAttributes="Bold"/>
+    </NavigationPage.TitleView>
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
