--- a/Cinestar-app/PodaciORacunu.xaml
+++ b/Cinestar-app/PodaciORacunu.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cinestar_app.PodaciORacunu"
+             BackgroundColor="#051851"
              Title="PodaciORacunu">
 
     <NavigationPage.TitleView>
@@ -13,10 +14,40 @@
                HorizontalOptions="Center"
                FontAttributes="Bold"/>
     </NavigationPage.TitleView>
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <StackLayout Padding="15">
+        <Label Text="Informacije o vašem računu" 
+               TextColor="White" 
+               FontSize="24" 
+               FontAttributes="Bold" 
+               HorizontalOptions="Center"
+               Margin="0,10,0,20"/>
+
+        <Frame BackgroundColor="#0c205e" Padding="20" CornerRadius="10">
+            <StackLayout Spacing="15">
+
+                <StackLayout Orientation="Horizontal" Spacing="10">
+                    <Label Text="Ime:" TextColor="White" FontAttributes="Bold" WidthRequest="120"/>
+                    <Label Text="{Binding Ime}" TextColor="White"/>
+                </StackLayout>
+
+                <StackLayout Orientation="Horizontal" Spacing="10">
+                    <Label Text="Prezime:" TextColor="White" FontAttributes="Bold" WidthRequest="120"/>
+                    <Label Text="{Binding Prezime}" TextColor="White"/>
+                </StackLayout>
+
+                <StackLayout Orientation="Horizontal" Spacing="10">
+                    <Label Text="Email:" TextColor="White" FontAttributes="Bold" WidthRequest="120"/>
+                    <Label Text="{Binding Email}" TextColor="White"/>
+                </StackLayout>
+
+
+            </StackLayout>
+        </Frame>
+
+        <Button Text="Promijeni lozinku" 
+BackgroundColor="#0c205e" 
+TextColor="White"
+Clicked="ChangePassword_Clicked"/>
+
+    </StackLayout>
 </ContentPage>
